# replication_16features

./: .gitignore  FEATURES.md  INTUITION.txt  README.md  expected.json  full102_expected.json  replicate.py  requirements.txt  submit_original8_all.sh  submit_replicate.sh  submit_save_table.sh  submit_step4_retrain.sh  submit_step5_retrain.sh
.claude/: settings.json
artifacts/: baselines_results.json  benchmark_results.json  gnn_results.txt  rl_policy_N4.pt  rl_policy_N6.pt  rl_policy_N7.pt  rl_policy_N9.pt  scalability.txt  scale_results.json  scale_results_long.json  (+2 more)
genetic_dp/: config.py  policy_phase_diagram.py  pyproject.toml
genetic_dp/envs/: __init__.py  genetic_testing_env.py  numpy_inference.py
genetic_dp/exact_dp/: backward_induction.py  policy.py  solver.py  utils.py
genetic_dp/experiments/: core.py
genetic_dp/inference/: __init__.py  belief_map_inference.py
genetic_dp/models/: belief.py  belief_accessors.py  genetics_cpd.py  outcomes.py  pedigree.py  reward.py
genetic_dp/optimisation/: bellman_rowgen.py  caches.py  consistency.py  constraints.py  dfvr_bound.py  dual_dp.py  frozen_theta.py  myopic_adp.py  oracle_adp.py  postprocess.py  rowgen.py  rowgen_bellman_milp.py  rowgen_bellman_milp_i.py  state_features.py  theta_model.py  utils.py
genetic_dp/policy/: baselines.py  candidate_generator_metrics.py  candidate_generators.py  evaluator.py  extractor.py  extractor_debug.py  myopic.py  safe_rollout.py
genetic_dp/rl/: networks.py  ppo.py
genetic_dp/utils/: artifact_paths.py  output_writer.py  pedigree_generator.py  state_indexer.py
(+77 files in other folders)
